WIP API documentation

--- a/APIFolder/api.htm
+++ b/APIFolder/api.htm
@@ -91,6 +91,14 @@ is there a retrieve waive and an Adjust Waiver as well?
               </div>
 
               <div class="toc-section">
+                  <h4><a href="#configs">Configurations</a></h4>
+                  <ul>
+                      <li><a href="#configscurrencyretrieve">Retrieve Currency Configuration</a></li>
+                      <li><a href="#configscurrencyupdate">Update Currency Configuration</a></li>
+                  </ul>
+              </div>
+
+              <div class="toc-section">
                   <h4><a href="#additionalfields">Additional Fields</a></h4>
                   <ul>
                       <li><a href="#listadditionalfields">List Additional Fields Sets</a></li>
@@ -107,17 +115,43 @@ is there a retrieve waive and an Adjust Waiver as well?
                   </ul>
               </div>
 
-              <div class="toc-section">
-                  <h4><a href="#x">Dont Know yetauthentication</a></h4>
-                  <ul>
-                      <li><a href="#authentication">authentication</a></li>
-                      <li><a href="#useraccounts">useraccounts</a></li>
 
+          </div>
+
+          <div class="toc-column4">
+              <div class="toc-section">
+                  <h4><a href="#authentication">Authentication</a></h4>
+                  <ul>
+                      <li><a href="#authenticationpermissions">Retrieve Authenticated Permissions</a></li>
+                  </ul>
+              </div>
+
+              <div class="toc-section">
+                  <h4><a href="#useraccounts">User Accounts</a></h4>
+                  <ul>
+                      <li><a href="#tbd">tbd</a></li>
+                  </ul>
+              </div>
+              <div class="toc-section">
+                  <h4><a href="#users">Users</a></h4>
+                  <ul>
+                      <li><a href="#tbd">tbd</a></li>
+                  </ul>
+              </div>
+              <div class="toc-section">
+                  <h4><a href="#roles">Roles</a></h4>
+                  <ul>
+                      <li><a href="#tbd">tbd</a></li>
+                  </ul>
+              </div>
+              <div class="toc-section">
+                  <h4><a href="#permissions">Permissions</a></h4>
+                  <ul>
+                      <li><a href="#tbd">tbd</a></li>
                   </ul>
               </div>
 
           </div>
-
 
       </div>
   </div>
