--- a/APIFolder/api.htm
+++ b/APIFolder/api.htm
@@ -188,13 +188,14 @@
                     <tr><td>/api/v1/clients/{clientId}/notes</td><td>GET, POST</td></tr>
                     <tr><td>/api/v1/clients/{clientId}/notes/{noteId}</td><td>GET, PUT</td></tr>
                     <tr><td></td><td></td></tr>
-                    <tr><td>/api/v1/loans</td><td>GET</td></tr>
+                    <tr><td>/api/v1/loans</td><td>POST</td></tr>
                     <tr><td>/api/v1/loans/template</td><td>GET</td></tr>
-                    <tr><td>/api/v1/loans/{loanId}</td><td>GET</td></tr>
-                    <tr><td>/api/v1/loans/{loanId}/undo</td><td>GET</td></tr>
+                    <tr><td>/api/v1/loans/{loanId}</td><td>GET, POST, DELETE, ?PUT?</td></tr>
+                    <tr><td>/api/v1/loans/{loanId}/undo</td><td>POST</td></tr>
                     <tr><td>/api/v1/loans/{loanId}/transactions/template</td><td>GET</td></tr>
-                    <tr><td>/api/v1/loans/{loanId}/transactions</td><td>GET</td></tr>
-                    <tr><td>/api/v1/loans/{loanId}/transactions/{repaymentId}</td><td>GET</td></tr>
+                    <tr><td>/api/v1/loans/{loanId}/transactions</td><td>POST</td></tr>
+                    <tr><td>/api/v1/loans/{loanId}/transactions/{repaymentId}</td><td>GET, PUT</td></tr>
+                    <tr><td>could {loadId}|{loadId}/undo|{loanId}/transactions POSTs all be same?</td><td></td></tr>
                     <tr><td></td><td></td></tr>
                     <tr><td>/api/v1/offices</td><td>GET</td></tr>
                     <tr><td>/api/v1/offices/template</td><td>GET</td></tr>
