--- a/APIFolder/api.htm
+++ b/APIFolder/api.htm
@@ -188,6 +188,7 @@
                     <tr><td>/api/v1/clients/{clientId}/notes</td><td>GET, POST</td></tr>
                     <tr><td>/api/v1/clients/{clientId}/notes/{noteId}</td><td>GET, PUT</td></tr>
                     <tr><td></td><td></td></tr>
+                    <tr><td></td><td></td></tr>
                     <tr><td>/api/v1/loans</td><td>POST</td></tr>
                     <tr><td>/api/v1/loans/template</td><td>GET</td></tr>
                     <tr><td>/api/v1/loans/{loanId}</td><td>GET, POST, DELETE, ?PUT?</td></tr>
@@ -197,35 +198,45 @@
                     <tr><td>/api/v1/loans/{loanId}/transactions/{repaymentId}</td><td>GET, PUT</td></tr>
                     <tr><td>could {loadId}|{loadId}/undo|{loanId}/transactions POSTs all be same?</td><td></td></tr>
                     <tr><td></td><td></td></tr>
-                    <tr><td>/api/v1/offices</td><td>GET</td></tr>
+                    <tr><td></td><td></td></tr>
+                    <tr><td>/api/v1/offices</td><td>GET, POST</td></tr>
                     <tr><td>/api/v1/offices/template</td><td>GET</td></tr>
-                    <tr><td>/api/v1/offices/{officeId}</td><td>GET</td></tr>
+                    <tr><td>/api/v1/offices/{officeId}</td><td>GET, PUT</td></tr>
                     <tr><td></td><td></td></tr>                    
-                    <tr><td>/api/v1/loanproducts</td><td>GET</td></tr>
+                    <tr><td></td><td></td></tr>
+                    <tr><td>/api/v1/loanproducts</td><td>GET, POST</td></tr>
                     <tr><td>/api/v1/loanproducts/template</td><td>GET</td></tr>
-                    <tr><td>/api/v1/loanproducts/{productId}</td><td>GET</td></tr>
+                    <tr><td>/api/v1/loanproducts/{productId}</td><td>GET, PUT</td></tr>
+                    <tr><td></td><td></td></tr>
                     <tr><td></td><td></td></tr>                    
                     <tr><td>/api/v1/configurations/currency</td><td>GET</td></tr>
+                    <tr><td></td><td></td></tr>
                     <tr><td></td><td></td></tr>                    
                     <tr><td>/api/v1/additionalfields</td><td>GET</td></tr>
                     <tr><td>/api/v1/additionalfields/{Type}/{Set}/{id}</td><td>GET</td></tr>
+                    <tr><td></td><td></td></tr>
                     <tr><td></td><td></td></tr>                    
                     <tr><td>/api/v1/reports</td><td>GET</td></tr>
                     <tr><td>/api/v1/reports/{reportName}</td><td>GET</td></tr>
+                    <tr><td></td><td></td></tr>
                     <tr><td></td><td></td></tr>                    
                     <tr><td>/api/v1/authentication</td><td>GET</td></tr>
+                    <tr><td></td><td></td></tr>
                     <tr><td></td><td></td></tr>                    
                     <tr><td>/api/v1/useraccounts/current</td><td>GET</td></tr>
                     <tr><td>/api/v1/useraccounts/current/password</td><td>GET</td></tr>
                     <tr><td>/api/v1/useraccounts/current/password/template</td><td>GET</td></tr>
+                    <tr><td></td><td></td></tr>
                     <tr><td></td><td></td></tr>                    
                     <tr><td>/api/v1/users</td><td>GET</td></tr>
                     <tr><td>/api/v1/users/template</td><td>GET</td></tr>
                     <tr><td>/api/v1/users/{userId}</td><td>GET</td></tr>
+                    <tr><td></td><td></td></tr>
                     <tr><td></td><td></td></tr>                    
                     <tr><td>/api/v1/roles</td><td>GET</td></tr>
                     <tr><td>/api/v1/roles/template</td><td>GET</td></tr>
                     <tr><td>/api/v1/roles/{roleId}</td><td>GET</td></tr>
+                    <tr><td></td><td></td></tr>
                     <tr><td></td><td></td></tr>                    
                     <tr><td>/api/v1/permissions</td><td>GET</td></tr>
                 </table>
