--- a/APIFolder/api.htm
+++ b/APIFolder/api.htm
@@ -209,33 +209,33 @@
                     <tr><td>/api/v1/loanproducts/{productId}</td><td>GET, PUT</td></tr>
                     <tr><td></td><td></td></tr>
                     <tr><td></td><td></td></tr>                    
-                    <tr><td>/api/v1/configurations/currency</td><td>GET</td></tr>
+                    <tr><td>/api/v1/configurations/currency</td><td>GET, PUT</td></tr>
                     <tr><td></td><td></td></tr>
                     <tr><td></td><td></td></tr>                    
                     <tr><td>/api/v1/additionalfields</td><td>GET</td></tr>
-                    <tr><td>/api/v1/additionalfields/{Type}/{Set}/{id}</td><td>GET</td></tr>
+                    <tr><td>/api/v1/additionalfields/{Type}/{Set}/{id}</td><td>GET, POST</td></tr>
                     <tr><td></td><td></td></tr>
                     <tr><td></td><td></td></tr>                    
                     <tr><td>/api/v1/reports</td><td>GET</td></tr>
                     <tr><td>/api/v1/reports/{reportName}</td><td>GET</td></tr>
                     <tr><td></td><td></td></tr>
                     <tr><td></td><td></td></tr>                    
-                    <tr><td>/api/v1/authentication</td><td>GET</td></tr>
+                    <tr><td>/api/v1/authentication</td><td>POST</td></tr>
                     <tr><td></td><td></td></tr>
                     <tr><td></td><td></td></tr>                    
-                    <tr><td>/api/v1/useraccounts/current</td><td>GET</td></tr>
-                    <tr><td>/api/v1/useraccounts/current/password</td><td>GET</td></tr>
+                    <tr><td>/api/v1/useraccounts/current</td><td>GET, PUT</td></tr>
+                    <tr><td>/api/v1/useraccounts/current/password</td><td>PUT</td></tr>
                     <tr><td>/api/v1/useraccounts/current/password/template</td><td>GET</td></tr>
                     <tr><td></td><td></td></tr>
                     <tr><td></td><td></td></tr>                    
-                    <tr><td>/api/v1/users</td><td>GET</td></tr>
+                    <tr><td>/api/v1/users</td><td>GET, POST</td></tr>
                     <tr><td>/api/v1/users/template</td><td>GET</td></tr>
-                    <tr><td>/api/v1/users/{userId}</td><td>GET</td></tr>
+                    <tr><td>/api/v1/users/{userId}</td><td>GET, PUT, DELETE</td></tr>
                     <tr><td></td><td></td></tr>
                     <tr><td></td><td></td></tr>                    
-                    <tr><td>/api/v1/roles</td><td>GET</td></tr>
+                    <tr><td>/api/v1/roles</td><td>GET, POST</td></tr>
                     <tr><td>/api/v1/roles/template</td><td>GET</td></tr>
-                    <tr><td>/api/v1/roles/{roleId}</td><td>GET</td></tr>
+                    <tr><td>/api/v1/roles/{roleId}</td><td>GET, PUT</td></tr>
                     <tr><td></td><td></td></tr>
                     <tr><td></td><td></td></tr>                    
                     <tr><td>/api/v1/permissions</td><td>GET</td></tr>
