--- a/APIFolder/api.htm
+++ b/APIFolder/api.htm
@@ -182,7 +182,7 @@
                     <tr><td><b>Resources</b></td><td><b>Verbs</b></td></tr>
                     <tr><td>/api/v1/clients</td><td>GET, POST</td></tr>
                     <tr><td>/api/v1/clients/template</td><td>GET</td></tr>
-                    <tr><td>/api/v1/clients/{clientId}</td><td>GET, ?PUT?</td></tr>
+                    <tr><td>/api/v1/clients/{clientId}</td><td>GET</td></tr>
                     <tr><td>/api/v1/clients/{clientId}/loans</td><td>GET</td></tr>
                     <tr><td>/api/v1/clients/{clientId}/notes</td><td>GET, POST</td></tr>
                     <tr><td>/api/v1/clients/{clientId}/notes/{noteId}</td><td>GET, PUT</td></tr>
@@ -190,12 +190,11 @@
                     <tr><td></td><td></td></tr>
                     <tr><td>/api/v1/loans</td><td>POST</td></tr>
                     <tr><td>/api/v1/loans/template</td><td>GET</td></tr>
-                    <tr><td>/api/v1/loans/{loanId}</td><td>GET, POST, DELETE, ?PUT?</td></tr>
+                    <tr><td>/api/v1/loans/{loanId}</td><td>GET, POST, DELETE</td></tr>
                     <tr><td>/api/v1/loans/{loanId}/undo</td><td>POST</td></tr>
                     <tr><td>/api/v1/loans/{loanId}/transactions/template</td><td>GET</td></tr>
                     <tr><td>/api/v1/loans/{loanId}/transactions</td><td>POST</td></tr>
                     <tr><td>/api/v1/loans/{loanId}/transactions/{repaymentId}</td><td>GET, PUT</td></tr>
-                    <tr><td>could {loadId}|{loadId}/undo|{loanId}/transactions POSTs all be same?</td><td></td></tr>
                     <tr><td></td><td></td></tr>
                     <tr><td></td><td></td></tr>
                     <tr><td>/api/v1/offices</td><td>GET, POST</td></tr>
