WIP api docs - matrix

--- a/APIFolder/api.htm
+++ b/APIFolder/api.htm
@@ -11,8 +11,13 @@
 <div id="page-wrapper">
     <div id="flybar">
         <div class="flybar-nav">
-            <h2 id="toc-menu-button" class="flybar-button">API Navigation</h2>
-            <div id="toc-menu" class="flybar-menu">
+            <h2 class="flybar-button">Overview</h2>
+            <div class="flybar-menu">go on then
+            </div>
+        </div>
+        <div class="flybar-nav">
+            <h2 class="flybar-button">Core</h2>
+            <div class="flybar-menu">
                 <div class="tocMatrix">
     <table class=matrixHeading>
         <tr class="matrixHeadingBG"><td></td><td valign="top"><div class="matrixHeadingVerbs"><table><tr><td>Resources</td></tr></table></div></td><td><table><tr><td><div class="matrixHeadingVerbs">POST</div></td></tr><tr><td>create/update</td></tr></table></td><td><table><tr><td><div class="matrixHeadingVerbs">GET</div></td></tr><tr><td>read</td></tr></table></td><td><table><tr><td><div class="matrixHeadingVerbs">PUT</div></td></tr><tr><td>simple update</td></tr></table></td><td><table><tr><td><div class="matrixHeadingVerbs">DELETE</div></td></tr><tr><td>delete</td></tr></table></td></tr>
@@ -44,17 +49,33 @@
         <tr><td></td><td>/v1/roles/{roleId}</td><td align="center">-</td><td><a href="#roles_retrieve">Retrieve a Role</a></td><td><a href="#roles_update">Update a Role</a></td><td align="center">-</td></tr>
         <tr class="alt"><td><a href="#permissions">PERMISSION</a></td><td>/v1/permissions</td><td align="center">-</td><td><a href="#permissions_list">List Application Permissions</a></td><td align="center">-</td><td align="center">-</td></tr>
     </table>
-                </div>
-                <div class="toc-column1">
-                    <div class="toc-section">
-                        <ul>
-                        <li><a href="#top">Mifos X API Documentation</a></li>
-                        <li><a href="#authentication_overview">Authentication Overview</a></li>
-                        <li><a href="#errors">Errors</a></li>
-                        </ul>
-                    </div>
-                </div>
-                
+                </div>                
+            </div>
+        </div>
+    
+        <div class="flybar-nav">
+            <h2 class="flybar-button">Configuration</h2>
+            <div class="flybar-menu">go on then
+            </div>
+        </div>
+        <div class="flybar-nav">
+            <h2 class="flybar-button">Additional Fields</h2>
+            <div class="flybar-menu">go on then
+            </div>
+        </div>
+        <div class="flybar-nav">
+            <h2 class="flybar-button">Report</h2>
+            <div class="flybar-menu">go on then
+            </div>
+        </div>
+        <div class="flybar-nav">
+            <h2 class="flybar-button">User Related</h2>
+            <div class="flybar-menu">go on then
+            </div>
+        </div>
+        <div class="flybar-nav">
+            <h2 class="flybar-button">Convenience API</h2>
+            <div class="flybar-menu">go on then
             </div>
         </div>
     </div>
